added get motion file
